<resources>
    <string name="app_name">YALAHWY</string>
    <string name="img_desc_post">image for post</string>
    <string name="addNewPost">Add</string>
    <string name="NewPostHint">Description here</string>
    <string name="NewPostHintReg">Region here</string>
    <string name="Profile_fname_hint">First Name</string>
    <string name="Profile_lname_hint">Last Name</string>
    <string name="Profile_contactNo_hint">Contact Number</string>
    <string name="Profile_address_hint">Your Address</string>
    <string name="Btn_hint">Save</string>
    
    <string name="login_logo_desc">Welcome</string>
    <string name="login_btn_text">Login to account</string>
    <string name="login_reg_btn_text">Need a new Account?</string>

    <string name="reg_btn_text">Create new Account</string>
    <string name="reg_login_text">Already have an Account?</string>
    <string name="reg_pass_text">Password...</string>
    <string name="reg_confirm_pass_text">Confirm Password...</string>

    <string name="title_activity_search_activit_y">search</string>
    <string name="chois">Please enter your search choice</string>
    <string-array name="search_cat">
        <item>NONE</item>
        <item >today</item>
        <item >yasterday</item>
        <item >this week</item>
        <item >last week</item>
        <item >this month</item>
    </string-array>
    <string-array name="search_cat_loc">
        <item>NONE</item>
        <item>Cairo</item>
        <item>Giza</item>
        <item>Alexandria</item>
        <item>Ismailia</item>
        <item>Menia</item>
        <item>Sharm el shake</item>
        <item>Domiat</item>
        <item>Fayoum</item>
        <item>Monofia</item>
        <item>Souhag</item>
    </string-array>
    <string-array name="search_type">
        <item>NONE</item>
        <item>Electronics</item>
        <item>home elements</item>
        <item>bages and wallets</item>
        <item>others</item>
    </string-array>
</resources>
